--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
-clickhouse-connect>=0.6.0
-celery>=5.3.0
-celery-singleton>=0.3.0
-redis>=5.0.0
-loguru>=0.7.0
-networkx>=3.0
-numpy>=1.24.0
-scipy>=1.10.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-cdlib>=0.3.0
-python-dotenv>=1.0.0
+clickhouse-connect>=0.10.0
+celery
+celery-singleton>=0.3.1
+redis
+loguru
+networkx
+numpy
+scipy
+pandas
+scikit-learn>
+cdlib>
+python-dotenv
 pydantic>=2.0.0
+
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+
+fastapi
+
+pandas
+pyarrow
+uvicorn
