--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,26 @@
+# Execution Mode
+# Options: 'daily' (runs celery beat), 'on-demand' (runs api server)
+ANALYTICS_EXECUTION_MODE=on-demand
+
+# API Configuration
+API_HOST=0.0.0.0
+API_PORT=8001
+
 # ClickHouse Connection
 CLICKHOUSE_HOST=localhost
-CLICKHOUSE_PORT=9000
+CLICKHOUSE_PORT=8123
 CLICKHOUSE_USER=default
-CLICKHOUSE_PASSWORD=
-CLICKHOUSE_DATABASE=blockchain
+CLICKHOUSE_PASSWORD=password1234
+CLICKHOUSE_DATABASE=default # Base DB for connection, pipeline creates analytics_{network}
 
 # Celery Configuration
+# Use REDIS_URL for unified config or split if needed
+REDIS_URL=redis://localhost:6379/0
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
 # Network Configuration
+# Default network for daily runs
 NETWORK=torus
 
 # Processing Configuration
