--- a/.env.example
+++ b/.env.example
@@ -11,22 +11,14 @@ CLICKHOUSE_HOST=localhost
 CLICKHOUSE_PORT=8123
 CLICKHOUSE_USER=default
 CLICKHOUSE_PASSWORD=password1234
-CLICKHOUSE_DATABASE=default # Base DB for connection, pipeline creates analytics_{network}
+CLICKHOUSE_DATABASE=default
+# Base DB for connection, pipeline creates analytics_{network}
 
 # Celery Configuration
 # Use REDIS_URL for unified config or split if needed
 REDIS_URL=redis://localhost:6379/0
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
-
-# Network Configuration
-# Default network for daily runs
-NETWORK=torus
-
-# Processing Configuration
-WINDOW_DAYS=180
-BATCH_SIZE=1000
-CHUNK_SIZE=10000
 
 # Logging
 LOG_LEVEL=INFO
