--- a/packages/analyzers/structural/structural_pattern_settings.json
+++ b/packages/analyzers/structural/structural_pattern_settings.json
@@ -29,7 +29,8 @@
     }
   },
   "proximity_analysis": {
-    "max_distance": 3
+    "max_distance": 3,
+    "distance_decay_factor": 1.0
   },
   "network_analysis": {
     "min_community_size": 5,
