--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,10 @@
-name: CI/CD Pipeline
+name: CI - Tests
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, feature/** ]
   pull_request:
     branches: [ main, develop ]
-  workflow_dispatch:
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   # Job 1: Run Unit Tests (Fast, No Dependencies)
@@ -34,7 +29,7 @@ jobs:
       
       - name: Run unit tests
         run: |
-          pytest tests/unit/ -v --tb=short --maxfail=5
+          pytest tests/unit/ -v --tb=short --maxfail=10
         continue-on-error: false
       
       - name: Upload unit test results
@@ -42,15 +37,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: unit-test-results
-          path: |
-            .pytest_cache/
-            **/__pycache__/
+          path: .pytest_cache/
+          retention-days: 7
 
   # Job 2: Run Integration Tests (With ClickHouse)
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
-    needs: unit-tests  # Run after unit tests pass
+    needs: unit-tests  # Only run if unit tests pass
     
     services:
       clickhouse:
@@ -83,6 +77,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
+      - name: Install ClickHouse client (for health check)
+        run: |
+          curl https://clickhouse.com/ | sh
+          sudo mv ./clickhouse /usr/local/bin/
+      
       - name: Wait for ClickHouse
         run: |
           echo "Waiting for ClickHouse to be ready..."
@@ -97,7 +96,7 @@ jobs:
       
       - name: Run integration tests
         run: |
-          pytest tests/integration/ -v --tb=short --maxfail=5
+          pytest tests/integration/ -v --tb=short --maxfail=10
         env:
           CLICKHOUSE_HOST: localhost
           CLICKHOUSE_PORT: 8323
@@ -111,62 +110,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: integration-test-results
-          path: |
-            .pytest_cache/
-            **/__pycache__/
+          path: .pytest_cache/
+          retention-days: 7
 
-  # Job 3: Build and Push Docker Image
-  build-and-push:
-    name: Build & Push Docker Image
-    runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests]  # Run after all tests pass
-    permissions:
-      contents: read
-      packages: write
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Extract metadata (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-      
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./ops/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
-      
-      - name: Image digest
-        run: echo ${{ steps.meta.outputs.digest }}
-
-  # Job 4: Test Summary
+  # Job 3: Test Summary
   test-summary:
     name: Test Summary
     runs-on: ubuntu-latest
@@ -176,6 +123,11 @@ jobs:
     steps:
       - name: Check test results
         run: |
+          echo "====== Test Results Summary ======"
+          echo "Unit Tests: ${{ needs.unit-tests.result }}"
+          echo "Integration Tests: ${{ needs.integration-tests.result }}"
+          echo "=================================="
+          
           if [ "${{ needs.unit-tests.result }}" != "success" ]; then
             echo "❌ Unit tests failed"
             exit 1
