--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,17 @@ CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
 # Logging
 LOG_LEVEL=INFO
+
+# Ingestion Configuration
+# Source type: S3, CLICKHOUSE, or HTTP
+INGESTION_SOURCE_TYPE=S3
+
+# S3 Ingestion Settings
+# Required:
+INGESTION_S3_BUCKET=your-bucket-name
+# Optional (for public buckets, leave credentials empty):
+INGESTION_S3_ENDPOINT=https://s3.amazonaws.com
+INGESTION_S3_REGION=us-east-1
+# Only needed for private buckets:
+# INGESTION_S3_ACCESS_KEY=your-access-key
+# INGESTION_S3_SECRET_KEY=your-secret-key
